--- a/IPSX/New Proxy/Storyboard/NewProxy.storyboard
+++ b/IPSX/New Proxy/Storyboard/NewProxy.storyboard
@@ -10,16 +10,58 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Proxy Summary View Controller-->
+        <!--Summary-->
         <scene sceneID="scf-RJ-bCB">
             <objects>
-                <viewController id="LP8-BI-u9L" customClass="ProxySummaryViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Summary" id="LP8-BI-u9L" customClass="ProxySummaryViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="geY-Hc-NhF">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0b9-W1-Wf1" userLabel="Top Bar">
+                                <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="omG-W9-Cqe" userLabel="Back">
+                                        <rect key="frame" x="0.0" y="50" width="44" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="44" id="Ah7-a8-SEL"/>
+                                            <constraint firstAttribute="height" constant="44" id="bVy-Vr-3xm"/>
+                                        </constraints>
+                                        <state key="normal" image="BackArrow">
+                                            <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65499997139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="BackButton:" destination="LP8-BI-u9L" eventType="touchUpInside" id="1iY-1c-puc"/>
+                                        </connections>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nXR-pB-BDc" userLabel="Separator">
+                                        <rect key="frame" x="0.0" y="93" width="375" height="0.5"/>
+                                        <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="0.5" id="wxv-xB-OQA"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RB5-G7-INd">
+                                        <rect key="frame" x="149" y="62" width="77" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="94" id="D8Y-d8-iwS"/>
+                                    <constraint firstItem="RB5-G7-INd" firstAttribute="centerX" secondItem="0b9-W1-Wf1" secondAttribute="centerX" id="FJi-TT-Xj6"/>
+                                    <constraint firstItem="nXR-pB-BDc" firstAttribute="leading" secondItem="0b9-W1-Wf1" secondAttribute="leading" id="Oli-Zd-qgj"/>
+                                    <constraint firstAttribute="trailing" secondItem="nXR-pB-BDc" secondAttribute="trailing" id="OqV-FR-H3O"/>
+                                    <constraint firstItem="omG-W9-Cqe" firstAttribute="leading" secondItem="0b9-W1-Wf1" secondAttribute="leading" id="Rbd-Vb-DbH"/>
+                                    <constraint firstAttribute="bottom" secondItem="nXR-pB-BDc" secondAttribute="bottom" id="d3X-Zn-VYG"/>
+                                    <constraint firstAttribute="bottom" secondItem="omG-W9-Cqe" secondAttribute="bottom" id="s57-bl-W9t"/>
+                                    <constraint firstItem="nXR-pB-BDc" firstAttribute="top" secondItem="RB5-G7-INd" secondAttribute="bottom" constant="10" id="xfY-vo-PWY"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="bFb-4r-0Ye">
-                                <rect key="frame" x="0.0" y="20" width="375" height="462"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="418"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ProxyPackCellID" rowHeight="88" id="jiI-pM-WoR" customClass="ProxyPackCell" customModule="IPSX" customModuleProvider="target">
@@ -166,24 +208,30 @@
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" red="0.16862745098039217" green="0.51372549019607838" blue="0.65490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="CancelButton:" destination="LP8-BI-u9L" eventType="touchUpInside" id="G0W-jd-WZ0"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="TQw-Fw-cGU" firstAttribute="top" secondItem="bFb-4r-0Ye" secondAttribute="bottom" constant="20" id="1H4-NF-7k3"/>
                             <constraint firstItem="1vB-kY-LNk" firstAttribute="leading" secondItem="TQw-Fw-cGU" secondAttribute="leading" id="4fk-mT-Z9J"/>
-                            <constraint firstItem="bFb-4r-0Ye" firstAttribute="top" secondItem="wbs-PU-8hd" secondAttribute="top" id="COn-us-rmb"/>
                             <constraint firstItem="bFb-4r-0Ye" firstAttribute="leading" secondItem="wbs-PU-8hd" secondAttribute="leading" id="Cof-me-0p7"/>
                             <constraint firstItem="1vB-kY-LNk" firstAttribute="top" secondItem="TQw-Fw-cGU" secondAttribute="bottom" constant="5" id="NWy-2U-5FK"/>
-                            <constraint firstItem="wbs-PU-8hd" firstAttribute="trailing" secondItem="bFb-4r-0Ye" secondAttribute="trailing" id="TUy-iN-ItE"/>
+                            <constraint firstItem="0b9-W1-Wf1" firstAttribute="trailing" secondItem="wbs-PU-8hd" secondAttribute="trailing" id="Osa-NZ-ld0"/>
+                            <constraint firstItem="bFb-4r-0Ye" firstAttribute="trailing" secondItem="wbs-PU-8hd" secondAttribute="trailing" id="SPI-hT-9I8"/>
+                            <constraint firstItem="0b9-W1-Wf1" firstAttribute="top" secondItem="wbs-PU-8hd" secondAttribute="top" constant="-50" id="W2P-xG-zw1"/>
+                            <constraint firstItem="bFb-4r-0Ye" firstAttribute="top" secondItem="0b9-W1-Wf1" secondAttribute="bottom" id="ZPz-z1-D6f"/>
                             <constraint firstItem="wbs-PU-8hd" firstAttribute="bottom" secondItem="1vB-kY-LNk" secondAttribute="bottom" constant="72" id="b9c-uz-ldF"/>
                             <constraint firstItem="TQw-Fw-cGU" firstAttribute="leading" secondItem="wbs-PU-8hd" secondAttribute="leading" constant="15" id="dDz-jj-dk5"/>
+                            <constraint firstItem="0b9-W1-Wf1" firstAttribute="leading" secondItem="wbs-PU-8hd" secondAttribute="leading" id="gVB-Nc-IqZ"/>
                             <constraint firstItem="wbs-PU-8hd" firstAttribute="trailing" secondItem="TQw-Fw-cGU" secondAttribute="trailing" constant="15" id="hXI-Zt-e2O"/>
                             <constraint firstItem="1vB-kY-LNk" firstAttribute="trailing" secondItem="TQw-Fw-cGU" secondAttribute="trailing" id="t0x-XD-4I0"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wbs-PU-8hd"/>
                     </view>
-                    <navigationItem key="navigationItem" id="ExB-ky-QJv"/>
+                    <navigationItem key="navigationItem" title="Summary" id="ExB-ky-QJv"/>
                     <connections>
                         <outlet property="bottomConstraint" destination="b9c-uz-ldF" id="0Jl-C5-Pv7"/>
                     </connections>
@@ -192,16 +240,56 @@
             </objects>
             <point key="canvasLocation" x="1103.2" y="151.57421289355324"/>
         </scene>
-        <!--Proxy Details View Controller-->
+        <!--Proxy Details-->
         <scene sceneID="jsj-8X-bm9">
             <objects>
-                <viewController id="DVS-15-PVw" customClass="ProxyDetailsViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Proxy Details" id="DVS-15-PVw" customClass="ProxyDetailsViewController" customModule="IPSX" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hyH-Wr-LCl">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rsc-cF-eVJ" userLabel="Top Bar">
+                                <rect key="frame" x="0.0" y="-30" width="375" height="94"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4dv-El-xwn" userLabel="Separator">
+                                        <rect key="frame" x="0.0" y="93" width="375" height="0.5"/>
+                                        <color key="backgroundColor" red="0.67450980390000004" green="0.67450980390000004" blue="0.67450980390000004" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="0.5" id="ckH-nr-udd"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Proxy Details" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ydx-08-JhE">
+                                        <rect key="frame" x="135" y="62" width="105" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8Mc-8z-Zi0">
+                                        <rect key="frame" x="323" y="58" width="37" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Done">
+                                            <color key="titleColor" red="0.16862745100000001" green="0.51372549020000002" blue="0.65490196079999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="DoneButton:" destination="DVS-15-PVw" eventType="touchUpInside" id="7Ra-2o-DkT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="ydx-08-JhE" firstAttribute="centerX" secondItem="rsc-cF-eVJ" secondAttribute="centerX" id="6aq-KI-K4k"/>
+                                    <constraint firstAttribute="trailing" secondItem="4dv-El-xwn" secondAttribute="trailing" id="6ju-yP-lpr"/>
+                                    <constraint firstAttribute="height" constant="94" id="PFm-LM-wgT"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="94" id="RDH-g8-HXv"/>
+                                    <constraint firstItem="4dv-El-xwn" firstAttribute="top" secondItem="ydx-08-JhE" secondAttribute="bottom" constant="10" id="VoQ-64-PuV"/>
+                                    <constraint firstItem="4dv-El-xwn" firstAttribute="top" secondItem="8Mc-8z-Zi0" secondAttribute="bottom" constant="5" id="a3T-tm-8rO"/>
+                                    <constraint firstItem="4dv-El-xwn" firstAttribute="leading" secondItem="rsc-cF-eVJ" secondAttribute="leading" id="eEp-r4-FQa"/>
+                                    <constraint firstAttribute="bottom" secondItem="4dv-El-xwn" secondAttribute="bottom" id="kBq-3g-VMR"/>
+                                    <constraint firstAttribute="trailing" secondItem="8Mc-8z-Zi0" secondAttribute="trailing" constant="15" id="qcU-zB-BZo"/>
+                                </constraints>
+                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="UEo-E8-VOQ">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ActivationDetailsCellID" rowHeight="100" id="aod-AG-rWA" customClass="ProxyActivationDetailsCell" customModule="IPSX" customModuleProvider="target">
@@ -387,9 +475,12 @@
                         <color key="backgroundColor" red="0.97254901960784312" green="0.97254901960784312" blue="0.97254901960784312" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="iab-dj-lCI" firstAttribute="trailing" secondItem="UEo-E8-VOQ" secondAttribute="trailing" id="78c-Y1-wzv"/>
+                            <constraint firstItem="rsc-cF-eVJ" firstAttribute="trailing" secondItem="iab-dj-lCI" secondAttribute="trailing" id="Fwd-Sp-6dk"/>
+                            <constraint firstItem="rsc-cF-eVJ" firstAttribute="leading" secondItem="iab-dj-lCI" secondAttribute="leading" id="WBs-Fd-t94"/>
                             <constraint firstItem="UEo-E8-VOQ" firstAttribute="leading" secondItem="iab-dj-lCI" secondAttribute="leading" id="duX-jV-ahj"/>
                             <constraint firstItem="iab-dj-lCI" firstAttribute="bottom" secondItem="UEo-E8-VOQ" secondAttribute="bottom" id="fK1-k8-Cn8"/>
-                            <constraint firstItem="UEo-E8-VOQ" firstAttribute="top" secondItem="iab-dj-lCI" secondAttribute="top" id="vL8-JE-mQZ"/>
+                            <constraint firstItem="rsc-cF-eVJ" firstAttribute="top" secondItem="iab-dj-lCI" secondAttribute="top" constant="-50" id="qc2-l8-Ym7"/>
+                            <constraint firstItem="UEo-E8-VOQ" firstAttribute="top" secondItem="rsc-cF-eVJ" secondAttribute="bottom" id="wOM-R2-z2Z"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="iab-dj-lCI"/>
                     </view>
@@ -400,6 +491,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="BackArrow" width="10" height="19"/>
         <image name="PackCoins" width="37" height="33"/>
     </resources>
 </document>
